# Screamverter-CLI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
include/: conv.h  main.h
src/: main.c  tostm.c  tostx.c
